--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -4,17 +4,40 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>The Black Goose Bistro News</title>
+        <style>
+
+    body {
+        background-color:#faf4ef;
+        margin: 0 10%
+        font-family: sans-serif;
+    }
+    h1 {
+        text-align: center;
+        font-family: serif;
+        font-weight: normal;
+        text-transform: uppercase;
+        border-bottom: 1px solid #57b1dc;
+        margin-top:30px;
+    }
+    h2 {
+        color:#d1633c;
+        font-size: 1em;
+    }
+    </style>
     </head>
     <body>
         <header>
             <h1>The Black Goose Bistro News</h1>
-        </header>
+    <nav>
         <ul>
-            <li>Home</li>
-            <li>Menu</li>
-            <li>News</li>
-            <li>Contact</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="bgnews.html">News</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="jenskitchen/jenskitche.html">Jen's Kitchen</a></li>
         </ul>
+    </nav>
+        </header>
         <article>
                 <h2>Summer Menu Items</h2>
                 <p>posted by BGB, 
