--- a/bistro/index.html
+++ b/bistro/index.html
@@ -70,6 +70,11 @@
 <h2>Location and Hours</h2>
 <p>Seekonk, Massachusetts;<br>
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight<br></p>
+
+<a href="pizza.html">
+    <img src="images/New Project.gif" alt="order pizza button" width="320" height="240">
+</a>
+
 <footer>
         <p>Please visit our social media pages</p>
         <p><img src="icons/twitter.svg" alt="twitter"></p>
