--- a/bistro/pizza.html
+++ b/bistro/pizza.html
@@ -28,7 +28,7 @@
   <li><label for="form-instructions">Delivery instructions:<br>
   <textarea name="instructions" rows="4" cols="60" maxlength="400" placeholder="No more than 400 characters long" id="form-instructions"></textarea></li>
 </ul>
-<fieldset>
+</fieldset>
 
 <h2>Design Your Dream Pizza:</h2>
 <fieldset>
