--- a/bistro/tapenade.html
+++ b/bistro/tapenade.html
@@ -4,7 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Tapenade Recipe</title>
+    <link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="menustyles.css">
 </head>
+<header><h1>Black Goose Bistro</h1>
+<div id="info">
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="summermenu8.html">Menu</a></li>
+        <li><a href="bgnews.html">News</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="jenskitchen/jenskitche.html">Jen's Kitchen</a></li>
+    </ul>   
+</nav>
+</div>
+</header>
 <body>
     <h1>Tapenade (Olive Spread)</h1>
     <p>This is a really simple dish to prepare and it's always a big hit at parties. My father recommends:</p>
