--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -4,40 +4,24 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>The Black Goose Bistro News</title>
-        <style>
-
-    body {
-        background-color:#faf4ef;
-        margin: 0 10%
-        font-family: sans-serif;
-    }
-    h1 {
-        text-align: center;
-        font-family: serif;
-        font-weight: normal;
-        text-transform: uppercase;
-        border-bottom: 1px solid #57b1dc;
-        margin-top:30px;
-    }
-    h2 {
-        color:#d1633c;
-        font-size: 1em;
-    }
-    </style>
+       <link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="menustyles.css">
     </head>
+    
     <body>
-        <header>
-            <h1>The Black Goose Bistro News</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="bgnews.html">News</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="jenskitchen/jenskitche.html">Jen's Kitchen</a></li>
-        </ul>
-    </nav>
-        </header>
+ <header><h1>Black Goose Bistro</h1>
+<div id="info">
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="summermenu8.html">Menu</a></li>
+        <li><a href="bgnews.html">News</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="jenskitchen/jenskitche.html">Jen's Kitchen</a></li>
+    </ul>   
+</nav>
+</div>
+</header>
         <article>
             <h2><a href="cooking.html">Cooking with Daniel</a></h2>
                 <h2>Summer Menu Items</h2>
