--- a/bistro/gallery.html
+++ b/bistro/gallery.html
@@ -4,32 +4,23 @@
 <meta charset="UTF-8">
 <title>Blackstone Bistro Gallery</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  background-color: #faf2e4;
-  margin: 0 10%;
-  font-family: sans-serif;
-  }
-
-h1 {
-  text-align: center;
-  font-family: serif;
-  font-weight: normal;
-  text-transform: uppercase;
-  border-bottom: 1px solid #57b1dc;
-  margin-top: 30px;
-}
-
-h2 {
-  color: #d1633c;
-  font-size: 1em;
-}
-img {
-	max-width: 100%;
-}
-</style>
+<link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="menustyles.css">
 
 </head>
+<header><h1>Black Goose Bistro</h1>
+<div id="info">
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="summermenu8.html">Menu</a></li>
+        <li><a href="bgnews.html">News</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="jenskitchen/jenskitche.html">Jen's Kitchen</a></li>
+    </ul>   
+</nav>
+</div>
+</header>
 
 <body>
 
