--- a/bistro/pizza.html
+++ b/bistro/pizza.html
@@ -3,13 +3,22 @@
 <head>
   <meta charset="utf-8" >
    <title>Blackstone Bistro: Pizza-on-Demand</title>
-   <style type="text/css">
-      ol, ul { 
-     list-style-type: none;
-      }
-   </style>
+  <link href='http://fonts.googleapis.com/css?family=Marko+One' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="menustyles.css">
 </head>
-
+<header><h1>Black Goose Bistro</h1>
+<div id="info">
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="summermenu8.html">Menu</a></li>
+        <li><a href="bgnews.html">News</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="jenskitchen/jenskitche.html">Jen's Kitchen</a></li>
+    </ul>   
+</nav>
+</div>
+</header>
 <body>
 
 <h1>Blackstone Bistro | Pizza-on-Demand</h1>
