--- a/bistro/index.html
+++ b/bistro/index.html
@@ -34,11 +34,11 @@
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight<br></p>
 
 <a href="pizza.html">
-    <img src="images/New Project.gif" alt="order pizza button" width="320" height="240">
+    <img src="images/New Project.gif" alt="order pizza button" width="320" height="240" class="center">
 </a>
 
 <footer>
-        <p>Please visit our social media pages</p>
-        <p><img src="icons/twitter.svg" alt="twitter"></p>
+        <p class="center">Please visit our social media pages</p>
+        <p><img src="icons/twitter.svg" alt="twitter" class="center" width="50px"></p>
 </body>
 </html>
