--- a/bistro/summermenu8.html
+++ b/bistro/summermenu8.html
@@ -17,6 +17,7 @@
 <p>Baker's Corner, Seekonk, Massachusetts<br>
 <span class="label">Hours: Monday through Thursday:</span> 11 to 9, <span class="label">Friday and Saturday;</span> 11 to midnight</p>
 <ul>
+<li><a href="index.html">Home</a></li>
 <li><a href="#appetizers">Appetizers</a></li>
 <li><a href="#entrees">Main Courses</a></li>
 <li><a href="#toast">Traditional Toasts</a></li>
