--- a/resume/index.html
+++ b/resume/index.html
@@ -4,50 +4,27 @@
 <head>
     <meta charset="utf-8">
     <title>JTM Resume</title>
-    <style>
+   
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css?family=Libertinus+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="stylesheetresume.css">
 
-    body {
-        background-color:#e9ffda;
-        margin: 0 10%;
-        font-family: georgia;
-        margin-left: 30px;
-        margin-right: 30px;
-    }
-    h1 {
-        text-align: center;
-        font-family: georgia;
-        font-weight: normal;
-        text-transform: uppercase;
-        border-bottom: 3px solid #2c4e27;
-        margin-top:30px;
-    }
-    h2 {
-        color:#ff4473;
-        font-size: 1.3em;
-    }
-    footer {
-        border-top: 3px solid #2c4e27;
-        text-align: center;
-        padding-top: 1em;
-    }
-    footer img {
-        width: 40px;
-        height: 40px;
-        margin-left: .5em;
-        margin-right: .5em;
-    }
-    </style>
 
 </head>
 <body>
+<div class="name">
 
-<h1>JT Marlatt</h1>
-
+<header><h1>JT Marlatt</h1></header>
+</div>
+<div class="info">
 <h2>About Me</h2>
 <p>Hello, my name is JT Marlatt, and this is my website resume. I am currently in school for game design, and hope to one day create my own game project. <br>
 I will be transferring school soon, and am currently in my last semester at my current school. I am currently taking a coding class, something I am unfamiliar with. <br>
 I am excited to see how my skills will improve as I work in this course.</p>
+</div>
 
+<div class="skills">
 <h2>Skills</h2>
 <ul>
     <li>Sound Design</li>
@@ -57,7 +34,9 @@ I am excited to see how my skills will improve as I work in this course.</p>
     <li>Design Theory</li>
     <li>Photography</li>
 </ul>
+</div>
 
+<div class="software">
 <h2>Software</h2>
 <ul>
     <li>Adobe Photoshop</li>
@@ -66,16 +45,21 @@ I am excited to see how my skills will improve as I work in this course.</p>
     <li>Blender</li>
     <li>Source Filmmaker</li>
 </ul>
+</div>
 
+<div class="samples">
 <h2>Work Samples</h2>
-<a href="work pages/3d model.html"><img src="tn/complete tn.png" alt="blender model" width="200" height="200"></a>
-<a href="work pages/davinci.html"><img src="tn/davinci tn.png" alt="video timeline" width="200" height="200"></a>
-<a href="work pages/ad.html"><img src="tn/mgs ad tn.png" alt="mgs ad" width="200" height="200"></a>
-<a href="work pages/game cover.html"><img src="tn/Game tn.png" alt="game" width="200" height="200"></a>
-<a href="work pages/painting.html"><img src="tn/atill life jtm tn.png" alt="painting" width="200" height="200"></a>
+<a href="work pages/3d model.html"><img src="tn/complete tn.png" alt="blender model" width="200" height="200" class="tn"></a>
+<a href="work pages/davinci.html"><img src="tn/davinci tn.png" alt="video timeline" width="200" height="200" class="tn"></a>
+<a href="work pages/ad.html"><img src="tn/mgs ad tn.png" alt="mgs ad" width="200" height="200" class="tn"></a>
+<a href="work pages/game cover.html"><img src="tn/Game tn.png" alt="game" width="200" height="200" class="tn"></a>
+<a href="work pages/painting.html"><img src="tn/atill life jtm tn.png" alt="painting" width="200" height="200" class="tn"></a>
+</div>
 
 <footer>
+    <div class="socials">
         <p><a href="https://github.com/jtm-ssc"><img src="github.png" alt="github"></a></p>
+    </div>
 </footer>
 </body>
 </html>
