--- a/resume/work pages/ad.html
+++ b/resume/work pages/ad.html
@@ -4,44 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>JTM Resume</title>
-    <style>
 
-    body {
-        background-color:#e9ffda;
-        margin: 0 10%;
-        font-family: georgia;
-        margin-left: 30px;
-        margin-right: 30px;
-    }
-    h1 {
-        text-align: center;
-        font-family: georgia;
-        font-weight: normal;
-        text-transform: uppercase;
-        border-bottom: 3px solid #2c4e27;
-        margin-top:30px;
-    }
-    h2 {
-        color:#ff4473;
-        font-size: 1.3em;
-    }
-    footer {
-        border-top: 3px solid #2c4e27;
-        text-align: center;
-        padding-top: 1em;
-    }
-    footer img {
-        width: 40px;
-        height: 40px;
-        margin-left: .5em;
-        margin-right: .5em;
-    }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css?family=Libertinus+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../stylesheetresume.css">
+
 
 </head>
 <body>
 
-<h1>JT Marlatt</h1>
+<header><h1>JT Marlatt</h1></header>
 
 <h2>Advertisement</h2>
 <p>An advertisement I made for another class, centered around theming</p>
